--- a/solidagui/templates/base.html
+++ b/solidagui/templates/base.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!--    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"-->
     <!--          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">-->
-   <link href="https://stackpath.bootstrapcdn.com/bootswatch/4.3.1/spacelab/bootstrap.min.css" rel="stylesheet"
-         integrity="sha384-sZG5VVk41YqhJjYXgJFoRVd3d2AdDgy4oyIytQJMGx/Mizz1N+5bgKQBSCGfKQnP" crossorigin="anonymous">
+   <link href="https://stackpath.bootstrapcdn.com/bootswatch/4.3.1/cosmo/bootstrap.min.css" rel="stylesheet" integrity="sha384-uhut8PejFZO8994oEgm/ZfAv0mW1/b83nczZzSwElbeILxwkN491YQXsCFTE6+nx" crossorigin="anonymous">
     <link href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" rel="stylesheet"
           integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
@@ -46,9 +45,9 @@
                 </div>
             </div>
             <a class="btn btn-primary border-light {% if 'docs' in request.path %} active {% endif %}"
-               href="{% url 'docs' %}">Docs</a>
+               target="_blank"  href="https://solida-core.github.io/docs/">Docs</a>
             <a class="btn btn-primary border-light {% if 'about' in request.path %} active {% endif %}"
-               href="{% url 'about' %}">About</a>
+               target="_blank" href="http://next.crs4.it/">About</a>
         </div>
         </div>
     </div>
