--- a/solidagui/templates/home.html
+++ b/solidagui/templates/home.html
@@ -14,16 +14,16 @@
 </div>
 <div class="row mt-3">
     <div class="col-sm-6">
-        <div class="card border-primary" style="max-width: 100rem; height:37rem;">
+        <div class="card border-primary" style="max-width: 100rem; height:31rem;">
             <div class="card-header bg-primary lead text-white">checkmate in 3 moves</div>
             <div class="card-body">
                 <p class="card-text lead mt-5">
-                <h3><span class="badge badge-primary ml-5 mr-2">1</span>Select the pipeline</h3>
+                <h1><span class="badge badge-primary ml-5 mr-2">1</span>Select the pipeline</h1>
                 </p>
                  <p class="card-text lead mt-5">
-                <h3><span class="badge badge-primary ml-5 mr-2">2</span>Fill the parameters</p>
+                <h1><span class="badge badge-primary ml-5 mr-2">2</span>Fill the form</p>
                  <p class="card-text lead mt-5">
-                    <h3><span class="badge badge-primary ml-5 mr-2">3</span>Deploy</p>
+                    <h1><span class="badge badge-primary ml-5 mr-2">3</span>Deploy</p>
             </div>
             <div class="card-footer text-center">
                 <a  href="{% url 'pipelines.browse' %}" class="btn btn-primary btn-lg btn-block">Start</a>
@@ -31,7 +31,7 @@
         </div>
     </div>
     <div class="col-sm-6">
-        <div class="card border-primary" style="max-width: 100rem; height:18rem;">
+        <div class="card border-primary" style="max-width: 100rem; height:15rem;">
             <div class="card-header bg-primary lead text-white">solida-core</div>
             <div class="card-body">
                 <p class="card-text text-justify">solida-core is a robust, and ready-to-use collection of extensively
@@ -43,7 +43,7 @@
                 <a href="https://github.com/solida-core" class="btn btn-primary" target="_blank">View</a>
             </div>
         </div>
-        <div class="card border-primary mt-3" style="max-width: 100rem; height:18rem;">
+        <div class="card border-primary mt-3" style="max-width: 100rem; height:15rem;">
              <div class="card-header bg-primary lead text-white">pipelines</div>
             <div class="card-body">
                 <p class="card-text text-justify">
